@@ -2,22 +2,17 @@ package com.company.crm.ai.view.timeline;
 
 import com.company.crm.ai.model.AiUiStatusUpdate;
 import com.company.crm.ai.model.ChatMessage;
-import com.company.crm.app.icons.CrmIcons;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.html.Span;
-import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 
 import java.util.List;
 
-public class AiTimelineThinkingRow extends HorizontalLayout {
+public class AiTimelineThinkingRow extends AbstractAiTimelineRow {
 
     public AiTimelineThinkingRow() {
-        setWidthFull();
-        setSpacing(true);
-        setPadding(false);
-        setAlignItems(Alignment.START);
+        super();
         addClassNames("ai-timeline-message-row", "ai-timeline-message-row-assistant", "ai-timeline-message-row-thinking");
     }
 
@@ -25,30 +20,10 @@ public class AiTimelineThinkingRow extends HorizontalLayout {
                             String assistantName,
                             String formattedTime,
                             String defaultThinkingIndicatorText) {
-        removeAll();
-
         ChatMessage placeholder = item.message();
         List<AiUiStatusUpdate> statusUpdates = item.statusUpdates() != null ? item.statusUpdates() : List.of();
 
-        AiTimelineAvatar assistantAvatar = new AiTimelineAvatar(true, assistantName);
-
-        VerticalLayout body = new VerticalLayout();
-        body.setPadding(false);
-        body.setSpacing(false);
-        body.setWidth("95%");
-        body.addClassName("ai-timeline-message-body");
-
-        HorizontalLayout header = new HorizontalLayout();
-        header.setPadding(false);
-        header.setSpacing(true);
-        header.setAlignItems(Alignment.BASELINE);
-        header.addClassName("ai-timeline-message-header");
-
-        Span actor = new Span(assistantName);
-        actor.addClassName("ai-timeline-message-actor");
-        Span time = new Span(formattedTime);
-        time.addClassName("ai-timeline-message-time");
-        header.add(actor, time);
+        initRow(true, assistantName, formattedTime);
 
         Span thinkingText = buildStatusSpan(resolveActiveStatus(statusUpdates, defaultThinkingIndicatorText),
                 "ai-timeline-thinking-text");
@@ -56,12 +31,10 @@ public class AiTimelineThinkingRow extends HorizontalLayout {
         Div shimmer = new Div();
         shimmer.addClassName("ai-timeline-thinking-shimmer");
 
-        body.add(header, thinkingText, shimmer);
+        body.add(thinkingText, shimmer);
         if (statusUpdates.size() > 1) {
             body.add(createThinkingStatusList(statusUpdates));
         }
-
-        add(assistantAvatar, body);
     }
 
     private Component createThinkingStatusList(List<AiUiStatusUpdate> statusUpdates) {
@@ -73,16 +46,21 @@ public class AiTimelineThinkingRow extends HorizontalLayout {
         java.util.stream.IntStream.rangeClosed(1, statusUpdates.size() - 1)
                 .mapToObj(i -> statusUpdates.get(statusUpdates.size() - 1 - i))
                 .forEach(update -> statusList.add(
-                        buildStatusSpan(update, "ai-timeline-thinking-status-item")));
+                        buildStatusSpan(update, "ai-timeline-thinking-status-item", true)));
 
         return statusList;
     }
 
     private Span buildStatusSpan(AiUiStatusUpdate update, String mainClass) {
+        return buildStatusSpan(update, mainClass, false);
+    }
+
+    private Span buildStatusSpan(AiUiStatusUpdate update, String mainClass, boolean completedPrefix) {
         Span container = new Span();
         container.addClassName(mainClass);
 
-        Span baseText = new Span(update.message());
+        String prefix = completedPrefix && update.isCompleted() ? "✓ " : "";
+        Span baseText = new Span(prefix + update.message());
         baseText.addClassName("ai-timeline-thinking-status-base");
         container.add(baseText);
 
@@ -98,6 +76,6 @@ public class AiTimelineThinkingRow extends HorizontalLayout {
         if (statusUpdates.isEmpty()) {
             return new AiUiStatusUpdate(defaultThinkingIndicatorText);
         }
-        return statusUpdates.get(statusUpdates.size() - 1);
+        return statusUpdates.getLast();
     }
 }
